--- a/plugins/nf-co2footprint/src/resources/assets/CO2FootprintReportTemplate.css
+++ b/plugins/nf-co2footprint/src/resources/assets/CO2FootprintReportTemplate.css
@@ -103,3 +103,23 @@ footer a {
   padding: 0.2rem 0.5rem;
   font-size: 1.1rem;
 }
+
+.tab-pane {
+  display: block !important;
+  position: relative !important;
+  visibility: hidden;
+  overflow: hidden;
+  width: 100%;
+  height: 0;
+  z-index: 0;
+  opacity: 0;
+  transition: visibility 0s, opacity 0.3s ease-in-out;
+}
+
+.tab-pane.active {
+  visibility: visible;
+  overflow: visible;
+  height: auto;
+  z-index: 1;
+  opacity: 1;
+}
